--- a/templates/donors/dashboard.html
+++ b/templates/donors/dashboard.html
@@ -13,6 +13,8 @@
 
 {% block page_name %}dashboard{% endblock %}
 
+{% block page_class %}biosample_tab{% endblock %}
+
 {% block page_header %}
 
 {% endblock %}
