--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -107,7 +107,7 @@
                        href="{% url 'dashboard' %}">
                         Dashboard
                     </a>
-                    <a class="nav-link {% if 'search_clinical' in request.path or 'search_tissue_samples' in request.path or '_search_facility' in request.path %} active {% endif %}"
+                    <a class="nav-link {% if 'search_samples/' in request.path %} active {% endif %}"
                        href="{% url 'search_tissue_samples' %}">Search Samples</a>
                     <a class="nav-link {% if 'saved_searches/' in request.path %} active {% endif %}"
                        href="{% url 'saved_searches' %}">My Saved Searches</a>
