--- a/templates/ctb/filter_saved_searches.html
+++ b/templates/ctb/filter_saved_searches.html
@@ -1,4 +1,4 @@
-<div id="delete_success_message" class="text-primary fw-bold mb-2">{{ message.success }}</div>
+<div id="delete_success_message" class="alert-text fw-bold mb-2">{{ message.success }}</div>
 <div id="delete_error_message" class="text-danger fw-bold mb-2">{{ message.error }}</div>
 <table id="saved_searches_tbl" class="table table-striped" style="width:100%">
     <thead>
