--- a/templates/donors/application_form.html
+++ b/templates/donors/application_form.html
@@ -11,8 +11,12 @@
 
 {% block page_name %}application_form{% endblock %}
 
+{% block page_class %}biosample_tab{% endblock %}
+
 {% block content %}
+
     <div class="container py-4">
+        <h5 class="fw-bold">Make Application</h5>
         <div class="p-3 my-3 bg-light rounded-2">
             <form enctype="multipart/form-data" method="POST" id="form-application" action="{% url 'application_submit' %}">
                 {% csrf_token %}
