--- a/templates/donors/clinical_search_facility.html
+++ b/templates/donors/clinical_search_facility.html
@@ -11,6 +11,8 @@
 
 {% block page_name %}clinical_search_facility{% endblock %}
 
+{% block page_class %}biosample_tab{% endblock %}
+
 {% block page_header %}
     <div class="container">
         <div class="pt-3">
