--- a/templates/donors/saved_searches.html
+++ b/templates/donors/saved_searches.html
@@ -13,6 +13,8 @@
 
 {% block page_name %}saved_searches{% endblock %}
 
+{% block page_class %}biosample_tab{% endblock %}
+
 {% block content %}
     <div class="container py-3">
         <div class="row">
