useful links adjusted

--- a/templates/ctb/useful_links.html
+++ b/templates/ctb/useful_links.html
@@ -13,16 +13,14 @@
 {% block page_name %}useful_links{% endblock %}
 
 {% block page_header %}
-    <div class="container">
-        <h3 class="page-banner">Links to Further Information on the Chernobyl Accident</h3>
-        <div>
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item">Resources</li>
-                    <li class="breadcrumb-item active" aria-current="page">Useful External Links</li>
-                </ol>
-            </nav>
-        </div>
+    <div class="page-banner">Links to Further Information on the Chernobyl Accident</div>
+    <div class="container mt-2">
+        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">Resources</li>
+                <li class="breadcrumb-item active" aria-current="page">Useful External Links</li>
+            </ol>
+        </nav>
     </div>
 
 {% endblock %}
@@ -81,5 +79,5 @@
         The Chernobyl Tissue Bank (CTB) was established as an internationally supported project and
         following agreement on standard operating procedures and approval by the relevant political and
         ethical authorities, the CTB officially started collecting material on 1st October 1998</p>
-    
+
 {% endblock %}
