--- a/templates/accounts/account/password_reset.html
+++ b/templates/accounts/account/password_reset.html
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
+                        {% blocktrans %}Please contact <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a> if you have any trouble resetting your password.{% endblocktrans %}
                     </div>
                 </div>
             </form>
