--- a/templates/donors/clinical_search_facility_result.html
+++ b/templates/donors/clinical_search_facility_result.html
@@ -52,16 +52,15 @@
                         criteria.
                     </div>
                     <hr>
-                    <div class="mt-2">
-                        <a type="button" class="btn btn-secondary"
-                           href="{% url 'clinical_search_facility' %}"><i
-                                class="fas fa-angle-double-left"></i> Back to Clinical Search
-                        </a>
-                        <a type="button" class="btn btn-secondary"
-                           href="{% url 'search_tissue_samples' %}"><i
-                                class="fas fa-angle-double-left"></i> Back to Search Tissue Samples
-                        </a>
-                        <div class="float-end" role="group" aria-label="action buttons">
+                    <div class="mt-2 d-flex gap-1 justify-content-end">
+                            <a type="button" class="btn btn-secondary"
+                               href="{% url 'clinical_search_facility' %}"><i
+                                    class="fas fa-angle-double-left"></i> Back to Clinical Search
+                            </a>
+                            <a type="button" class="btn btn-secondary"
+                               href="{% url 'search_tissue_samples' %}"><i
+                                    class="fas fa-angle-double-left"></i> Back to Search Tissue Samples
+                            </a>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                     data-bs-target="#saveModal"><i
                                     class="fa-solid fa-floppy-disk"></i> Save
@@ -74,7 +73,6 @@
                                href="{% url 'driver_search_facility' %}">Search by Driver Mutation <i
                                     class="fas fa-angle-double-right"></i>
                             </a>
-                        </div>
                     </div>
                 </div>
             </div>
