--- a/templates/two_factor/_wizard_actions.html
+++ b/templates/two_factor/_wizard_actions.html
@@ -4,13 +4,11 @@
     <a href="{{ cancel_url }}"
        class="btn btn-link">{% trans "Cancel" %}</a>
 {% endif %}
-<div class="d-grid gap-2 d-md-flex float-end">
+<div class="d-grid gap-2 d-flex justify-content-end">
     {% if wizard.steps.prev %}
         <button name="wizard_goto_step" type="submit"
                 value="{{ wizard.steps.prev }}"
                 class="btn btn-secondary">{% trans "Back" %}</button>
-{#    {% else %}#}
-{#        <button disabled name="" type="button" class="btn btn-secondary">{% trans "Back" %}</button>#}
     {% endif %}
     <button type="submit" class="btn btn-primary">{% trans "Next" %}</button>
 </div>
